# rust-in-action

chapter-1/cereals/: Cargo.toml
chapter-1/control/: Cargo.toml
chapter-1/fruit/: Cargo.toml
chapter-1/hello/: Cargo.toml
chapter-1/hello2/: Cargo.toml
chapter-1/letters/: Cargo.toml
chapter-1/penguins/: Cargo.toml
chapter-1/productivity/: Cargo.toml
chapter-1/race/: Cargo.toml
chapter-2/add-with-lifetimes/: Cargo.toml
chapter-2/bell-number/: Cargo.toml
chapter-2/catalan-numbers/: Cargo.toml
chapter-2/compare/: Cargo.toml
chapter-2/complex/: Cargo.toml
chapter-2/first-steps/: Cargo.toml
chapter-2/generic-function/: Cargo.toml
chapter-2/grep-lite/: Cargo.toml
chapter-2/introducing-vecs/: Cargo.toml
chapter-2/mandelbrot/: Cargo.toml
chapter-2/match-needles/: Cargo.toml
chapter-2/needle-in-haystack/: Cargo.toml
chapter-2/non-base/: Cargo.toml
chapter-2/numbers/: Cargo.toml
chapter-2/ok/: ok
chapter-2/read-file/: Cargo.toml
chapter-2/str-simple-pattern/: Cargo.toml
chapter-2/three-arrays/: Cargo.toml
chapter-2/while-duration/: Cargo.toml
chapter-3/defining-files-neatly/: Cargo.toml
chapter-3/file-doced/: Cargo.toml
chapter-3/file-states/: Cargo.toml
chapter-3/fileresult/: Cargo.toml
chapter-3/globalerror/: Cargo.toml
chapter-3/implementing-display/: Cargo.toml
chapter-3/mock-file/: Cargo.toml
chapter-3/not-quite-file/: Cargo.toml
chapter-3/not-quite-file-2/: Cargo.toml
chapter-3/parse-log/: Cargo.toml
chapter-3/public/: Cargo.toml
chapter-3/skeleton-read-trait/: Cargo.toml
chapter-4/check-sats/: Cargo.toml
chapter-4/check-sats-2/: Cargo.toml
chapter-4/check-sats-3/: Cargo.toml
chapter-4/check-sats-4/: Cargo.toml
chapter-6/particles/: Cargo.toml
chapter-6/particles/src/: main.rs
chapter-7/actionkv/: Cargo.toml
chapter-7/actionkv/src/: akv_disk.rs  akv_mem.rs  lib.rs
chapter-7/serde-eg/: Cargo.toml
chapter-7/serde-eg/src/: main.rs
chapter-8/mge/: Cargo.toml
chapter-8/mge/src/: dns.rs  ethernet.rs  http.rs  main.rs
chapter-9/clock/: Cargo.toml
chapter-9/clock/src/: main.rs
(+96 files in other folders)
