[package]
name = "particles"
version = "0.1.0"
authors = ["Bassam Ismail <skippednote@skippednote.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston2d-graphics = "0.39"
piston_window = "0.117"
rand = "0.8"
