[package]
name = "serde-eg"
version = "0.1.0"
authors = ["Bassam Ismail <skippednote@skippednote.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
serde = "1"
serde_cbor = "0.8"
serde_derive = "1"
serde_json = "1"
