[package]
name = "mge"
version = "0.1.0"
authors = ["Bassam Ismail <skippednote@skippednote.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
rand = "0.7"
url = "2"

[dependencies.trust-dns]
version = "0.16"
default_features = false

[dependencies.smoltcp]
version = "0.6"
default_features = true
features = ["proto-igmp", "proto-ipv4", "verbose"]
